Ensure gap is not rendered

--- a/src/assets/sass/modules/_responsive.scss
+++ b/src/assets/sass/modules/_responsive.scss
@@ -59,6 +59,7 @@
 
     .layout-align-inline-center {
         display: flex;
+        gap: 0 !important;
         flex-wrap: wrap;
         justify-content: center;
         margin-right: -1em;
